syntax = "proto3";

package pb.ohlcv;

option go_package = "server/proto/v2/pbohlcv";

import "google/api/annotations.proto";
import "server/types/types.proto";

service Api {
  rpc GetTicker (GetRequest) returns (Response) {
    option (google.api.http) = {
      post: "/v2/ohlcv/get-ticker",
      body: "*"
      additional_bindings {
        get: "/v2/ohlcv/get-ticker"
      }
    };
  }
  rpc SetTicker (SetRequest) returns (Response) {
    option (google.api.http) = {
      post: "/v2/ohlcv/set-ticker",
      body: "*"
    };
  }
}

message GetRequest {
  int64 limit = 1;
  int64 from = 2;
  int64 to = 3;
  string base_unit = 4;
  string quote_unit = 5;
  string resolution = 6;
}
message SetRequest {
  string key = 1;
  double price = 2;
  double value = 3;
  string base_unit = 4;
  string quote_unit = 5;
  string assigning = 6;
}
message Response {
  repeated types.Ticker fields = 1;
  types.Stats stats = 2;
}